--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "te",
+  "name": "next",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "typecheck": "tsc --pretty --noEmit",
     "lint:prettier": "prettier --check .",
     "format": "run-s format:prettier",
@@ -15,20 +16,20 @@
     "@chakra-ui/react": "^2.1.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@hookform/resolvers": "^2.8.10",
     "framer-motion": "^6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.31.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@vitejs/plugin-react": "^1.3.2",
+    "@types/node": "17.0.40",
+    "@types/react": "18.0.11",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.17.0",
+    "eslint-config-next": "12.1.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9"
+    "typescript": "4.7.3"
   }
 }
