--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "typescript": "4.7.3"
+  },
+  "volta": {
+    "node": "14.19.3",
+    "yarn": "1.22.19"
   }
 }
