--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "run-p dev:*",
+    "dev:next": "next dev",
+    "dev:path": "pathpida --output src/lib/pathpida --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -29,6 +31,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "npm-run-all": "^4.1.5",
+    "pathpida": "^0.18.1",
     "prettier": "^2.6.2",
     "typescript": "4.7.3"
   },
